- Pretty much reverting the AuthorTimelineView virtual scroll because it just looked janky. Trying out the content-visibility property and fixing images instead. - Allowing users to view author details in Timeline view. - Formatting my own dates. I'm not interested in fighting the dates anymore, and the dates are generally dead-simple (I'm not dealing with seconds / microseconds)

--- a/src/components/AuthorTimelineView/AuthorTimelineView.module.css
+++ b/src/components/AuthorTimelineView/AuthorTimelineView.module.css
@@ -25,11 +25,13 @@
 }
 
 .authorTimelineViewEntries {
+  align-items: flex-start;
   display: flex;
   flex: 1;
   flex-direction: column;
   gap: 1em;
   height: 100%;
+  justify-content: flex-start;
   list-style-type: none;
   overflow-y: auto;
   position: relative;
@@ -38,11 +40,22 @@
 
 .authorTimelineViewEntry {
   align-items: center;
+  contain-intrinsic-size: 100px;
+  content-visibility: auto;
   display: grid;
-  flex-shrink: 0;
+  flex: 0 0 auto;
   grid-template-columns: min-content min-content 1fr;
   gap: 0 1em;
   min-height: 100px;
+}
+
+.authorTimelineViewAction {
+  opacity: 0;
+  transition: 0.3s opacity;
+
+  .authorTimelineViewEntry:hover & {
+    opacity: 1;
+  }
 }
 
 .authorTimelineViewYear {
